guacamole/guacamoledeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  labels:
    app: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacamole
  template:
    metadata:
      labels:
        app: guacamole
    spec:
      containers:
      - name: guacamole
        image: maxwaldorf/guacamole
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: guacamole
spec:
  type: ClusterIP
  selector:
    app: guacamole
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  #   protocol: TCP  # optional protocol
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: Deny";
      more_set_headers "X-Xss-Protection: 1; mode=block";
      more_set_headers "X-Content-Type-Options: nosniff";
  name: guacamole
  namespace: default
spec:
  rules:
    - host: guacamole.orionmail.org 
      http:
        paths:
        - backend:
            service:
              name: guacamole
              port:
                number: 8080
          path: /
          pathType: ImplementationSpecific
